--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Josefin+Slab:300,400,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP&display=swap');
 * {
   margin: 0;
   padding: 0;
 }
 
 .container {
-  background: linear-gradient(100deg, rgb(7, 92, 85) 50%, #ac2066 0);
+  background: #089fe6;
   width: 100%;
   height: 100vh;
   display: flex;
@@ -17,22 +17,22 @@
 }
 
 .app-wrapper {
-  background-color: #292f38;
+  background-color: rgba(255, 255, 255, 0.917);
   width: 25%;
-  min-width: 450px;
-  height: 600px;
+  min-width: 550px;
+  height: 700px;
   padding: 30px;
   box-sizing: border-box;
-  border-radius: 5px;
-  box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4);
+  border-radius: 7px;
+  /* box-shadow: 0 15px 30px rgba(0, 0, 0, 0.4); */
 }
 
 .header h1 {
-  color: #ccc;
+  color: #089fe6;
   font-weight: 300;
   text-align: center;
   margin: 50px 20px 60px 20px;
-  font-family: 'Josefin Slab', serif;
+  font-family: 'Noto Sans JP', sans-serif;
 }
 
 .main {
@@ -77,18 +77,18 @@
 }
 
 .task-input {
-  width: 350px;
-  min-width: 250px;
-  padding: 15px 10px 10px 20px;
+  width: 450px;
+  min-width: 350px;
+  padding: 25px 20px 20px 30px;
   margin-right: 10px;
   font-family: 'Josefin Sans', serif;
-  font-size: 15px;
-  color: #ccc;
-  background-color: #1d222b;
+  font-size: 19px;
+  color: #000000;
+  background-color: 'white';
   border: 1px solid #444;
   outline: none;
   border-radius: 20px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0 1px 2px rgba(0, 0, 0, 0.3); */
 }
 
 .buttons {
@@ -96,18 +96,18 @@
 }
 
 .btn {
-  margin: 10px;
+  margin: 20px;
 }
 
 .add-task-btn {
-  min-width: 100px;
-  background-color: #9b0d54;
+  min-width: 200px;
+  background-color: #0a8062;
   color: #ccc;
   border: none;
   font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   border-radius: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); */
   outline: none;
   cursor: pointer;
 }
@@ -117,10 +117,11 @@
   justify-content: space-between;
   margin: 20px 0;
   padding-bottom: 5px;
+  font-size: 18px;
 }
 
 .list-item span {
-  color: #999;
+  color: rgb(15, 1, 1);
 }
 
 .task-btn {
@@ -131,27 +132,27 @@
 }
 
 .btn-delete i {
-  font-size: 16px;
-  color: #bbb;
+  font-size: 18px;
+  color: #ac2412;
   margin-right: 20px;
 }
 
 .btn-edit i {
-  font-size: 16px;
-  color: #bbb;
+  font-size: 18px;
+  color: rgb(119, 110, 7);
   margin-right: 20px;
 }
 
 .clear-btn {
-  width: 100px;
+  width: 200px;
   height: 35px;
-  background-color: #2a665e;
+  background-color: #ac2412;
   color: #ccc;
   border: none;
   font-family: 'Montserrat', sans-serif;
-  font-size: 14px;
+  font-size: 18px;
   border-radius: 20px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
+  /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3); */
   outline: none;
   cursor: pointer;
 }
@@ -160,5 +161,7 @@
   color: #777;
   text-align: center;
   font-size: 18px;
-  margin-top: 20px;
+  margin-top: 40px;
+  color: red;
+  font-family: 'Noto Sans JP', sans-serif;
 }
